--- a/style.css
+++ b/style.css
@@ -1,133 +1,254 @@
 * {
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .header {
-  max-width: 1280px;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 2px solid #e7bebe;
+  min-height: 200px;
 }
 
-.header__title {
+.header__personal-info {
+  width: 60%;
+  background-color: #e7bebe;
+  position: relative;
+  border-right: 1px solid #524f4f;
+}
+
+.header__personal-info::after {
+  content: "";
+  border: 40px solid transparent;
+  border-left: 30px solid #e7bebe;
+  position: absolute;
+  right: -52px;
+  top: 64px;
+}
+
+.header__personal-info::before {
+  content: "";
+  border: 30px solid transparent;
+  border-left: 34px solid #867a7a;
+  position: absolute;
+  right: -48px;
+  top: 74px;
+}
+
+.header__name {
+  color: #524f4f;
+  padding: 25px 0 15px 50px;
   font-size: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+}
+
+.header__vacancy {
+  background-color: #fff;
+  color: #524f4f;
+  padding: 5px 10px;
+  border: 1px solid #524f4f;
+  margin-left: 50px;
+  font-size: 18px;
 }
 
 .header__contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  list-style: none;
-  gap: 20px;
-  font-size: 18px;
-  padding: 0;
-}
-
-.header__text {
-  font-size: 25px;
-}
-
-.header__info {
-  width: 40%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 25px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-right: 5px solid #cbcbcbbd;
-  background-color: #000;
-  color: #fff;
-  padding-left: 35px;
+  gap: 15px;
 }
 
-.header__about-me {
-  width: 60%;
-  font-size: 18px;
+.header__contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  gap: 20px;
+}
+
+.header__wrapper-contact {
+  text-align: end;
   letter-spacing: 0.06em;
-  padding: 30px;
-  background-color: #ffc206bd;
-  color: black;
-  border-bottom: 10px solid #a19d9d;
 }
 
-.header__title-contacts {
-  background-color: #cbcbcbbd;
-  color: black;
-  font-size: 30px;
-  padding-left: 15px;
+.header__title-contact {
+  color: #524f4f;
+  margin-bottom: 5px;
+  font-size: 20px;
+  letter-spacing: 0;
+}
+
+.header__img {
+  background-color: #e7bebe;
+  padding: 10px;
+  border-radius: 50%;
+  overflow: visible;
+}
+
+.header__title {
+  -webkit-writing-mode: tb-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: tb-rl;
+  background-color: #e7bebe;
+  padding: 23px 10px 0;
+  color: #524f4f;
+  letter-spacing: 0.5em;
 }
 
 .main {
-  max-width: 1280px;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.main__left-block {
+.main__education {
   width: 40%;
-  min-width: 270px;
-  border-right: 5px solid #ffc206bd;
+  padding-left: 25px;
+  padding-bottom: 50px;
+  background-color: #524f4f;
 }
 
-.main__right-block {
-  width: 60%;
-}
-
-.skills {
+.main__wrapper-title {
+  padding-top: 40px;
+  padding-bottom: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  font-size: 18px;
+  color: #fff;
 }
 
-.skills__title {
-  font-size: 30px;
-  padding-left: 15px;
-  background-color: #ffc206bd;
-  color: black;
-  padding-top: 20px;
+.main__title-education {
+  width: 75%;
+  max-width: 250px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding-top: 10px;
 }
 
-.skills__list {
-  max-width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.main__img {
+  background-color: #e7bebe;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.main__education-list {
+  color: #fff;
   list-style: none;
-  gap: 18px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 35px;
+  padding: 0;
+  letter-spacing: 0.1em;
+  font-style: italic;
+  font-size: 16px;
+}
+
+.main__education-type-title {
+  letter-spacing: 0.02em;
+  font-style: normal;
   font-size: 20px;
-  padding: 20px;
-  background-color: #000;
-  color: #fff;
 }
 
-.education__wrapper {
+.main__about-me {
+  width: 60%;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+.main__title-about-me {
+  width: 55%;
+  max-width: 250px;
+  border-top: 1px solid #524f4f;
+  border-bottom: 1px solid #524f4f;
+  padding-top: 10px;
+  color: #524f4f;
+  letter-spacing: 0.06em;
+}
+
+.main__img_about-me {
+  border: 1px solid #524f4f;
+  background-color: #e7bebe;
+}
+
+.main__text {
+  width: 90%;
+  font-size: 18px;
+  font-style: italic;
+  color: #524f4f;
+  letter-spacing: 0.06em;
+}
+
+.main__text-start {
+  font-size: 20px;
+  font-style: normal;
+  letter-spacing: 0.05em;
+  font-weight: 600;
+}
+
+.works-skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.works-skills__skills {
+  width: 40%;
+  background-color: #524f4f;
+  padding-left: 25px;
+}
+
+.works-skills__wrapper-title-skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.works-skills__title-skills {
+  letter-spacing: 0.06em;
+}
+
+.works-skills__projects {
+  width: 60%;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+.works-skills__img-skills {
+  background-color: #e7bebe;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.works-skills__list {
+  color: #fff;
+  list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -135,72 +256,43 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 20px;
-  padding: 15px 0 15px 25px;
-  background-color: #000;
-  color: #fff;
+  gap: 10px;
+  padding: 0;
+  letter-spacing: 0.1em;
+  font-style: italic;
+  font-size: 18px;
 }
 
-.language {
-  background-color: #a19d9d;
-  color: #fff;
-  padding-left: 15px;
+.works-skills__img-project {
+  border: 1px solid #524f4f;
+  background-color: #e7bebe;
 }
 
-.language__title {
-  padding-top: 20px;
-}
-
-.projects__project {
+.wrapper-title {
+  padding-top: 40px;
+  padding-bottom: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #ffc206bd;
-  color: black;
-}
-
-.projects__img {
-  width: 300px;
-}
-
-.projects__title {
-  font-size: 30px;
-  padding-left: 15px;
-  background-color: #a19d9d;
+  font-size: 18px;
   color: #fff;
-  padding-top: 20px;
 }
 
-.projects__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+.wrapper-title__title-black {
+  width: 75%;
+  max-width: 250px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding-top: 10px;
 }
 
-.projects__git {
-  background-color: #a19d9d;
-  color: white;
-  font-size: 35px;
-  padding: 25px;
-}
-
-.projects__link {
-  text-decoration: none;
-  color: white;
-}
-
-.title {
-  min-width: 185px;
+.wrapper-title__title-white {
+  width: 55%;
+  max-width: 250px;
+  border-top: 1px solid #524f4f;
+  border-bottom: 1px solid #524f4f;
+  padding-top: 10px;
+  color: #524f4f;
+  letter-spacing: 0.06em;
 }
 /*# sourceMappingURL=style.css.map */
